After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783964 - [PATCH] mouse forward/back buttons don't work
[PATCH] mouse forward/back buttons don't work
Status: RESOLVED FIXED
Product: devhelp
Classification: Applications
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: devhelp-maint
devhelp-maint
Depends on:
Blocks:
 
 
Reported: 2017-06-19 14:25 UTC by Lubomir Rintel
Modified: 2017-06-29 09:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
A fix (1.39 KB, patch)
2017-06-19 14:25 UTC, Lubomir Rintel
committed Details | Review

Description Lubomir Rintel 2017-06-19 14:25:57 UTC
Created attachment 354045 [details] [review]
A fix

See attached patch
Comment 1 Sébastien Wilmet 2017-06-21 10:16:28 UTC
The patch doesn't seem to be generated with `git format-patch`, so there is no [review] link, and `git bz apply 783964` fails.

The patch looks good, although I won't be able to test it. I wonder if GDK provides enum values or #defines for the buttons, to replace 8 and 9 (and 3). 1, 2, 3 are still more or less obvious, but 8 and 9 are far less obvious.
Comment 2 Lubomir Rintel 2017-06-27 09:46:14 UTC
(In reply to Sébastien Wilmet from comment #1)
> The patch doesn't seem to be generated with `git format-patch`, so there is
> no [review] link, and `git bz apply 783964` fails.

I think the issue was that the "Patch" link was not checked in the attachment details. Fixed now, the Review link is there.

> The patch looks good, although I won't be able to test it. I wonder if GDK
> provides enum values or #defines for the buttons, to replace 8 and 9 (and
> 3). 1, 2, 3 are still more or less obvious, but 8 and 9 are far less obvious.

There doesn't seem to be any. A quick look at epiphany source suggests that they do exactly the same thing (using number literals in the same fashion).
Comment 3 Sébastien Wilmet 2017-06-27 18:46:50 UTC
Review of attachment 354045 [details] [review]:

Looks good, thanks.
Comment 4 Sébastien Wilmet 2017-06-29 09:51:01 UTC
Comment on attachment 354045 [details] [review]
A fix

Pushed with some small modifications:
https://git.gnome.org/browse/devhelp/commit/?id=5dc50336d6879cd38cf19c0254fd9719fb1ba66a