Window: act on forward/back mouse buttons

Some mice emit button presses when the scroll wheel is tilted to the
side. Web browsers use them to navigate in history.

https://bugzilla.gnome.org/show_bug.cgi?id=783964